overlays/uksouth-perf/olympus/hermes/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/service-upstream: 'true'
  name: hermes
  namespace: default
spec:
  rules:
    - host: olympus.${cluster_name}.${cluster_location}.bink.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hermes-api
                port:
                  number: 80
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: hermes-api
                port:
                  number: 80
          - path: /static/
            pathType: Prefix
            backend:
              service:
                name: hermes-api
                port:
                  number: 80
  tls:
    - hosts:
        - olympus.${cluster_name}.${cluster_location}.bink.sh
